--- a/fundamentals/package.json
+++ b/fundamentals/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "openai": "^5.11.0"
+    "openai": "^5.11.0",
+    "tiktoken": "^1.0.21"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
