--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node -r ts-node/register --env-file=../.env src/basic/index.ts",
+    "startchat": "node -r ts-node/register --env-file=../.env src/basic/index.ts",
+    "start": "node -r ts-node/register --env-file=../.env src/function_calling/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
