--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "startchat": "node -r ts-node/register --env-file=../.env src/basic/index.ts",
     "startfncall": "node -r ts-node/register --env-file=../.env src/function_calling/index.ts",
-    "start": "node -r ts-node/register --env-file=../.env src/train_resrvation_assistance/index.ts",
+    "startTRA": "node -r ts-node/register --env-file=../.env src/train_resrvation_assistance/index.ts",
+    "start": "node -r ts-node/register --env-file=../.env src/embaddings/data.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
